<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">SleepyWifi</string>
    <string name="settings">Settings</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="app_state_title">The app service is: </string>
    <string name="app_state_desc1">Wifi is turned </string>
    <string name="app_state_desc2">when the phone is in sleepmode</string>
    <string name="request_battery_opt">Request Ignore battery optimization for this app</string>
    <string name="warning_battery_opt">This app will not work correctly until you grant this app the \'Ignore battery optimization\' permission</string>

    <!-- App Key -->
    <string name="app_state" translatable="false">app_state</string>
    <!-- /Key -->
    <string name="about">About</string>
    <string name="action_about">About SleepyWifi</string>
    <string name="action_settings">SleepyWifi Settings</string>
    <string name="image_description" translatable="false">App Logo</string>

    <!-- About activity -->
    <string name="about_info">SleepyWifi Info</string>
    <string name="about_license">License</string>
    <string name="about_author">Author</string>
    <string name="about_infoT">This Android app brings back the \'turn wifi off when the phone is in sleepmode\' option for Android 8.1 and Android 9.0.</string>
    <string name="about_licenseT">SleepyWifi is licensed under GPL-3.0 or later.</string>
    <string name="about_authorT">SleepyWifi is developed by <u>Devluuk</u></string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_general">General</string>

    <!--Bluetooth Key -->
    <string name="bluetooth_state" translatable="false">bluetooth_state</string>
    <!-- /Key -->
    <string name="pref_bluetooth_title">Enable Bluetooth Sleeping</string>
    <string name="pref_description_enable_bluetooth">Turn Bluetooth off when the phone is in sleepmode
    </string>

<!--    <string name="pref_keep_wifi_on">Keep Wifi on during sleep</string>-->
<!--    &lt;!&ndash; Wifi Key &ndash;&gt;-->
<!--    <string name="key_wifi_setting" translatable="false">wifi_state</string>-->
<!--    &lt;!&ndash; /Key &ndash;&gt;-->
<!--    <string-array name="pref_list_titles" translatable="false">-->
<!--        <item>Always</item>-->
<!--        <item>Only when plugged in</item>-->
<!--        <item>Never</item>-->
<!--    </string-array>-->
<!--    <string-array name="pref_list_values" translatable="false">-->
<!--        <item>1</item>-->
<!--        <item>0</item>-->
<!--        <item>-1</item>-->
<!--    </string-array>-->
    
    <!--Power off Key -->
    <string name="key_power_off_time" translatable="false">power_off</string>
    <!-- /Key -->
    <string name="pref_delay_power_off">Delay Wifi turning off</string>
    <string name="pref_delay_power_off_detail">Choose how long the delay is for turning off the wifi</string>
    <string-array name="pref_power_off_time">
        <item>1 second</item>
        <item>5 seconds</item>
        <item>10 seconds</item>
        <item>20 seconds</item>
        <item>1 minute</item>
        <item>5 minute</item>
    </string-array>
    <string-array name="pref_power_off_values">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>300</item>
    </string-array>
</resources>