<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp"
        android:contentDescription="@string/image_description"
        android:src="@drawable/ic_launcher_round" />

    <TextView
        android:id="@+id/about_info"
        android:layout_width="320dp"
        android:layout_height="79dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="46dp"
        android:layout_marginBottom="285dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/about_infoT"
        android:textAlignment="center"
        android:textSize="18sp"
        android:typeface="normal" />

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="240dp"
        android:text="@string/about_author"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/author_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="220dp"
        android:text="@string/about_authorT"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/license"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="160dp"
        android:text="@string/about_license"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/license_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="140dp"
        android:text="@string/about_licenseT"
        android:textSize="16sp" />
</RelativeLayout>